--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Titan One';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #fcf5de;
 }
 
 code {
@@ -37,4 +38,84 @@ code {
 
 .plus-sign:hover {
   cursor: pointer;
+}
+
+/* login page */
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+  margin-top: 300px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.login-container h1 {
+  font-size: 58px;
+}
+
+.login-form {
+  font-size: 16px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form-input {
+  border: solid gray;
+  font-family: 'Titan One';
+  border-radius: 6px;
+}
+
+.login-page-button-container {
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.login-page-button {
+  margin: 7px;
+  border: none;
+  font-family: "Titan One";
+  background-color: #FF9AE6;
+  height: 27px;
+  border-radius: 6px;
+}
+
+.login-page-button:hover {
+  background-color: #FCF5DE;
+  box-shadow: 2px 2px 1px 1px #FF9AE6;
+  cursor: pointer;
+}
+
+/* nav bar */
+.header-container {
+  background-color: #9AB4FF;
+  height: 120px;
+}
+
+.title {
+  margin: 0;
+  text-align: left;
+  font-size: 56px;
+}
+
+.nav-links {
+  text-align: right;
+  padding: 30px;
+}
+
+.nav {
+  padding: 30px;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.nav:hover {
+  background-color: #FCF5DE;
+  border-radius: 20px;
 }
