--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,24 @@ img.user-recipe-card-container:hover {
   justify-content: center;
 }
 
+.recipe-page-button {
+  margin: 7px;
+  border: none;
+  font-family: "Titan One";
+  background-color: #FF9AE6;
+  height: 35px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 6px;
+  width: 35%;
+}
+
+.recipe-page-button:hover {
+  background-color: #FCF5DE;
+  box-shadow: 2px 2px 1px 1px #FF9AE6;
+  cursor: pointer;
+}
+
 .error-message {
   /* border: solid rgb(174, 18, 18, 0.4);
   background: rgb(136, 135, 135, 0.2);
