--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,47 @@ code {
     monospace;
 }
 
+.login-background {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  overflow-x: hidden;
+}
+
+.login-background:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200vh;
+  background-image: url('/Users/kaitiejones/Development/code/phase-5/phase-5-project/images/jeremy-bezanger-QJ7gHF6V4no-unsplash.jpg');
+  background-size: auto 50%;
+  background-repeat: repeat-y;
+  background-position-y: center;
+  background-position-y: 0vh;
+  /* opacity: .5; */
+  z-index: -1;
+  pointer-events: none;
+}
+
+.login-background:before {
+  animation: scrollBG 67s linear 0s infinite;
+}
+
+@keyframes scrollBG {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(0, -100vh, 0);
+  }
+}
+
 .recipe-cards-container {
   display: flex;
   flex-direction: column;
@@ -72,7 +113,7 @@ img.user-recipe-card-container:hover {
   margin: 7px;
   border: none;
   font-family: "Titan One";
-  background-color: #FF9AE6;
+  background-color: #8CD3FF;
   height: 35px;
   margin-left: auto;
   margin-right: auto;
@@ -81,8 +122,8 @@ img.user-recipe-card-container:hover {
 }
 
 .recipe-page-button:hover {
-  background-color: #FCF5DE;
-  box-shadow: 2px 2px 1px 1px #FF9AE6;
+  background-color: #FFB88C;
+  box-shadow: 2px 2px 1px 1px #8CD3FF;
   cursor: pointer;
 }
 
@@ -102,6 +143,9 @@ img.user-recipe-card-container:hover {
 /* login page */
 .login-container {
   display: flex;
+  border: solid rgb(4, 4, 4, 0.5);
+  border-radius: 25px;
+  background: rgb(219, 219, 219, 0.5);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -139,20 +183,20 @@ img.user-recipe-card-container:hover {
   margin: 7px;
   border: none;
   font-family: "Titan One";
-  background-color: #FF9AE6;
+  background-color: #8CD3FF;
   height: 27px;
   border-radius: 6px;
 }
 
 .login-page-button:hover {
-  background-color: #FCF5DE;
-  box-shadow: 2px 2px 1px 1px #FF9AE6;
+  background-color: #FFB88C;
+  box-shadow: 2px 2px 1px 1px #8CD3FF;
   cursor: pointer;
 }
 
 /* nav bar */
 .header-container {
-  background-color: #9AB4FF;
+  background-color: #8CD3FF;
 }
 
 .title {
@@ -183,18 +227,18 @@ img.user-recipe-card-container:hover {
   color: black;
   font-size: 18px;
   display: inline-block;
-  background-color: #FCF5DE;
+  background-color: #FFB88C;
   border-radius: 20px 20px 0 0;
 }
 
 .nav-clicked:hover {
-  background-color: #FCF5DE;
+  background-color: #fcf5de;
   border-radius: 20px 20px 0 0;
   cursor: pointer;
 }
 
 .nav:hover {
-  background-color: #FCF5DE;
+  background-color: #fcf5de;
   border-radius: 20px 20px 0 0;
   cursor: pointer;
 }
